brat/test/golden/imports/use-illegal-z.brat.golden
Error in test/golden/imports/use-illegal-z.brat on line 4:
main = x, y, z
             ^

  z not found in (value) environment

